5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1635_1054.log
== TEST (2019-04-12 07:44:51) 
-- CODE:
x = float(input("X de um plano cartesiano: "))
y = float(input("Y de um plano cartesiano: "))

if (2x + y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

-- ERROR:
File "XXXX", line 4
    if (2x + y == 3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 07:45:16) 
-- CODE:
x = float(input("X de um plano cartesiano: "))
y = float(input("Y de um plano cartesiano: "))

if (2x + y = 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

-- ERROR:
File "XXXX", line 4
    if (2x + y = 3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 07:50:48) 
-- CODE:
x = float(input("Leia o x de um plano cartesiano: "))
y = float(input("Leia o y de um plano cartesiano: "))

if (2x + y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- ERROR:
File "XXXX", line 4
    if (2x + y == 3):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 07:54:35) 
-- CODE:
ponto = float(input("Leia o x e y de um plano cartesiano: "))


if (ponto == 2x + y = 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- ERROR:
File "XXXX", line 4
    if (ponto == 2x + y = 3):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 07:55:41) 
-- CODE:
ponto = float(input("Leia o x e y de um plano cartesiano: "))


if (ponto == 2 ** x + y = 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- ERROR:
File "XXXX", line 4
    if (ponto == 2 ** x + y = 3):
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 08:06:09) 
-- CODE:
x_y = float(input("Leia o x e y de um plano cartesiano: "))

if (2**x+y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- EXECUTION TIME:
0.170824
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1054/main.py", line 3, in <module>
    if (2**x+y == 3):
NameError: name 'x' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 08:06:13) 
-- CODE:
x_y = float(input("Leia o x e y de um plano cartesiano: "))

if (2**x+y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (2**x+y == 3):
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 08:08:05) 
-- CODE:
x = float(input("Leia o x de um plano cartesiano: "))
y = float(input("Leia o y de um plano cartesiano: "))

if (2 * x + y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- OUTPUT:
ponto pertence a reta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 08:08:28) 
-- CODE:
x = float(input("Leia o x de um plano cartesiano: "))
y = float(input("Leia o y de um plano cartesiano: "))

if (2 * x + y == 3):
	mensagem = "ponto pertence a reta"
else:
	mensagem = "ponto nao pertence a reta"

print(mensagem.lower())

-- EXECUTION TIME:
0.119818
-- TEST CASE 1:
---- input:
20
-37
---- correct output:
ponto pertence a reta
---- user output:
ponto pertence a reta
-- TEST CASE 2:
---- input:
5
13
---- correct output:
ponto nao pertence a reta
---- user output:
ponto nao pertence a reta
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
